layouts and routes setup

--- a/src/assets/styles/components/sidebar.css
+++ b/src/assets/styles/components/sidebar.css
@@ -31,6 +31,10 @@
 .sidebar_links_item.active {
   @apply bg-blue-600/10 text-blue-700;
 }
+
+.sidebar_links_item.active .title {
+  @apply font-medium tracking-normal;
+}
 .sidebar_links_item:not(.active) {
   @apply hover:bg-slate-900/10 dark:hover:bg-white/5;
 }
