--- a/src/assets/styles/custom-components.css
+++ b/src/assets/styles/custom-components.css
@@ -2,6 +2,9 @@
 @import "./components/transection-table.css";
 @import "./components/button.css";
 @import "./components/input.css";
+@import "./components/select.css";
+@import "./components/stat-card.css";
+@import "./components/settings.css";
 
 /* layout css */
 @import "./components/layout.css";
